csce242/assignments/assignment 3/styles.css
body {
    background: beige;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}
#content {
    border-radius:2px;
    padding:2px;
    margins: 2.5%;
}

#m-header {
    color:green;
    padding:5px;
    border-radius:5px;
    text-align: center;
}

#m-content {
    padding:5px;
}

#m-content2 {
    
}

.col1of6 {
    padding: 5px;
    margin:5px;
    background-color: cadetblue;
    
}

#side-nav a {
    color: white;
}

.col1of2 {
    padding: 5px;
    margin: 5px;
}

#m-footer {
    color:chocolate
}

#gallery {

}

img {

}

#main-nav ul {
    list-style-type: none;
    padding-left:0;
}

#main-nav li {
    list-style-type: none;
    padding:5px;
    background-color: chocolate;
    border-left: green;
    border-right: green ;
}

#main-nav a {
    text-align: center;
    color:white;
}

#main-nav {

}

h1 {
    text-align: center;
}

@media only screen and (min-width: 768px) {
    body {
        background-color: bisque;
    }
    #content {
        
    }

    #main-nav li,.col1of2 {
        flex: 1;
        border-style: solid 1px;
        border-color: green;
    }
    
    .col1of3 {
        flex:3;
    }
    
    .col1of6 {
        flex:1;
    }

    .flex-container {
        display:flex;
    }

    .one {
        flex:1;
    }

    .two {
        flex:2;
    }

    .three {
        flex:3;
    }

    .four {
        flex:4;
    }

    .five {
        flex:5;
    }

    .six {
        flex:6;
    }

    #main-nav ul {
        display:flex;
    }

    #main-nav li {
        flex:1;
    }

    #main-nav a {
        padding:5px;
    }

    #main-nav a:hover {
        background: beige;
        color:chocolate;
        border-bottom:1px solid blue;
    }

    .hide-small
    {
        display:block;
    }
}

